data/diff_tests/wasmtime/return_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3087.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7f\02\8c\80\80\80\00\01\03\6d\6f\64\04\66"
    "\75\6e\63\00\00\03\83\80\80\80\00\02\00\00\07\88"
    "\80\80\80\00\01\04\66\75\6e\63\00\01\0a\95\80\80"
    "\80\00\02\85\80\80\80\00\00\10\00\0f\0b\85\80\80"
    "\80\00\00\10\01\0f\0b"
  )
""
)